--- a/CV_Projekt/CV_Projekt/Views/Cv/Inspect.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Inspect.cshtml
@@ -116,7 +116,7 @@
 										<div class="experience-item">
 											<p class="card-text">@edu.Location</p>
 											<p class="card-text">@edu.Description</p>
-											<p class="card-text">@edu.Program'</p>
+											<p class="card-text">@edu.Program</p>
 											<p class="card-text">@edu.Level</p>
 											<p class="card-text">@edu.City</p>
 											<p class="card-text"><i>@edu.StartDate.ToString("yyyy-MM-dd") - @edu.EndDate.ToString("yyyy-MM-dd")</i></p>
