--- a/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
@@ -60,7 +60,7 @@
             </div>
             <div class="row py-2">
                 <div class="col-md-6 d-flex align-content-end">
-                    <input asp-for="IsPrivate" class="form-check-input ms-auto" type="checkbox" value="" id="flexCheckDefault">
+                    <input asp-for="IsPrivate" class="form-check-input ms-auto" type="checkbox" id="flexCheckDefault">
                     
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3 ">
