--- a/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
@@ -58,7 +58,7 @@
             <div class="row py-2">
                 <div class="col-md-6">
                     <label class="settingsLbl" for="email">Epost</label>
-                    <input asp-for="User.UserName" type="text" class="bg-light form-control" value="@Model.User.UserName">
+                    <input asp-for="User.UserName" type="text" class="bg-light form-control" value="@Model.User.UserName" disabled>
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label class="settingsLbl" for="phone">Telefonnummer</label>
@@ -86,7 +86,7 @@
             </div>
             <div class="row py-2">
                 <div class="col-md-6">
-                        <input asp-for="User.isPrivate" class="form-check-input" type="checkbox" value="@Model.User.isPrivate" id="flexCheckDefault">
+                        <input asp-for="User.isPrivate" class="form-check-input" type="checkbox" id="flexCheckDefault">
                         <label class="settingsLbl form-check-label" for="flexCheckDefault">
                             Privat
                         </label>
