--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -145,6 +145,7 @@
 									<input asp-for="User.Id" value="@Model.User.Id" hidden />
 									<button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219; margin-bottom:1rem;">Hitta någon som jag!</button>
 								</form>
+								<p class="text-light">Denna knapp kommer matcha ihop dig med en profil som har samma taggar som du.<br /> Får du inget resultat? Prova att lägga till en tagg!</p>
 							}
 						</div>
 					</div>
