--- a/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
@@ -25,7 +25,7 @@
 
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <input type="text" id="form2Example17" class="form-control form-control-lg" asp-for="UserName" />
-                                        <label class="form-label" for="form2Example17">Användarnamn</label>
+                                        <label class="form-label" for="form2Example17">Epost</label>
                                     </div>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
