--- a/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
@@ -1,34 +1,34 @@
 ﻿@model SettingsViewModel
 
 <body class="bodyUserProfileSettings" 
-      style="margin: 0;
+style="margin: 0;
             padding: 0;
             box-sizing: border-box;
             font-family: 'Poppins', sans-serif;
             background-color: dimgrey;">
     <div class="wrapper my-sm-5" 
-         style="background-color:#fff;
+    style="background-color:#fff;
                 padding: 30px 50px;
                 border: 1px solid #ff6219;
                 border-radius: 15px;
                 margin: 10px auto;
                 max-width: 600px;">
         <h4 class="pb-4 border-bottom" 
-            style="letter-spacing: -1px;
+        style="letter-spacing: -1px;
                    font-weight: 400;">
             Ändra Profil
-    </h4>
+        </h4>
 
-    <div asp-validation-summary="All" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
 
-    <form method="post" asp-action="Settings" enctype="multipart/form-data">
-        <input asp-for="User.ContactInformation.Id" value="@Model.User.ContactInformation.Id" hidden />
-        <input asp-for="User.isActive" value="@Model.User.isActive" hidden />
-        <input asp-for="User.Id" type="text" value="@Model.User.Id" hidden/>
+        <form method="post" asp-action="Settings" enctype="multipart/form-data">
+            <input asp-for="User.ContactInformation.Id" value="@Model.User.ContactInformation.Id" hidden />
+            <input asp-for="User.isActive" value="@Model.User.isActive" hidden />
+            <input asp-for="User.Id" type="text" value="@Model.User.Id" hidden/>
             <div class="d-flex align-items-start py-3 border-bottom">
                 <img id="profilePic" src="@Url.Content(Model.User.PictureUrl)"
-                     class="img" alt=""
-                     style="width: 100px;
+                class="img" alt=""
+                style="width: 100px;
                             height: 100px;
                             border-radius: 6px;
                             object-fit: cover" />
@@ -44,28 +44,28 @@
                     <input asp-for="ImageFile" id="pictureInput" type="file" accept="image/png, image/jpeg" class="btn p-2" style="background-color:#fff; color:#ff6219; border-color:#ff6219 ">
                 </div>
             </div>
-        <div class="py-2">
-            <div class="row py-2">
-                <div class="col-md-6">
-                    <label class="settingsLbl"for="firstname">Förnamn</label>
+            <div class="py-2">
+                <div class="row py-2">
+                    <div class="col-md-6">
+                        <label class="settingsLbl"for="firstname">Förnamn</label>
                         <input asp-for="User.FirstName" type="text" class="bg-light form-control" value="@Model.User.FirstName">
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                        <label class="settingsLbl" for="lastname">Efternamn</label>
+                        <input asp-for="User.LastName" type="text" class="bg-light form-control" value="@Model.User.LastName">
+                    </div>
                 </div>
-                <div class="col-md-6 pt-md-0 pt-3">
-                    <label class="settingsLbl" for="lastname">Efternamn</label>
-                    <input asp-for="User.LastName" type="text" class="bg-light form-control" value="@Model.User.LastName">
+                <div class="row py-2">
+                    <div class="col-md-6">
+                        <label class="settingsLbl" for="email">Epost</label>
+                        <input asp-for="User.UserName" type="text" class="bg-light form-control" value="@Model.User.UserName" disabled>
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                        <label class="settingsLbl" for="phone">Telefonnummer</label>
+                        <input asp-for="User.ContactInformation.Phone" type="tel" class="bg-light form-control" value="@Model.User.ContactInformation.Phone">
+                    </div>
+
                 </div>
-            </div>
-            <div class="row py-2">
-                <div class="col-md-6">
-                    <label class="settingsLbl" for="email">Epost</label>
-                    <input asp-for="User.UserName" type="text" class="bg-light form-control" value="@Model.User.UserName" disabled>
-                </div>
-                <div class="col-md-6 pt-md-0 pt-3">
-                    <label class="settingsLbl" for="phone">Telefonnummer</label>
-                    <input asp-for="User.ContactInformation.Phone" type="tel" class="bg-light form-control" value="@Model.User.ContactInformation.Phone">
-                </div>
-               
-            </div>
                 <div class="row py-2">
                     <div class="col-md-6">
                         <label class="settingsLbl" for="address">Adress</label>
@@ -74,45 +74,45 @@
                     <div class="col-md-6 pt-md-0 pt-3">                      
                     </div>     
                 </div>
-            <div class="row py-2">
-                <div class="col-md-6">
-                    <label class="settingsLbl" for="passwordchange">Nytt Lösenord</label>
-                    <input asp-for="User.Password" type="password" class="bg-light form-control" value="@Model.User.Password" placeholder="Minst 6 tecken långt">
+                <div class="row py-2">
+                    <div class="col-md-6">
+                        <label class="settingsLbl" for="passwordchange">Nytt Lösenord</label>
+                        <input asp-for="User.Password" type="password" class="bg-light form-control" value="@Model.User.Password" placeholder="Minst 6 tecken långt">
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                        <label class="settingsLbl" for="confirmpasswordchange">Bekräfta Lösenord</label>
+                        <input asp-for="ConfirmedPassword" type="password" class="bg-light form-control" value="@Model.User.Password">
+                    </div>
                 </div>
-                <div class="col-md-6 pt-md-0 pt-3">
-                    <label class="settingsLbl" for="confirmpasswordchange">Bekräfta Lösenord</label>
-                    <input asp-for="ConfirmedPassword" type="password" class="bg-light form-control" value="@Model.User.Password">
-                </div>
-            </div>
-            <div class="row py-2">
-                <div class="col-md-6">
+                <div class="row py-2">
+                    <div class="col-md-6">
                         <input asp-for="User.isPrivate" class="form-check-input" type="checkbox" id="flexCheckDefault">
                         <label class="settingsLbl form-check-label" for="flexCheckDefault">
                             Privat
                         </label>
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                    </div>
                 </div>
-                <div class="col-md-6 pt-md-0 pt-3">
+
+                <div class="py-3 pb-4 border-bottom">
+                    <button class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;" type="submit">Spara Ändringar</button>
+                    <button class="btn border border-light button" style="background-color: #fff; color: #ff6219">Avbryt</button>
                 </div>
-            </div>
-               
-            <div class="py-3 pb-4 border-bottom">
-                <button class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;" type="submit">Spara Ändringar</button>
-                <button class="btn border border-light button" style="background-color: #fff; color: #ff6219">Avbryt</button>
-            </div>
-            <div class="d-sm-flex align-items-center pt-3" id="deactivate">
-                <div class="ml-auto">
-                    @if(Model.User.isActive)
-                    {
+                <div class="d-sm-flex align-items-center pt-3" id="deactivate">
+                    <div class="ml-auto">
+                        @if(Model.User.isActive)
+                        {
                             <button asp-action="SetDisabled" class="btn btn-outline-danger m-2">Avaktivera konto</button>
-                    }
-                    else
-                    {
+                        }
+                        else
+                        {
                             <button asp-action="SetDisabled" class="btn btn-outline-danger m-2">Aktivera konto</button>
-                    }
+                        }
+                    </div>
                 </div>
-            </div>
                 <div class="py-3 pb-4 border-bottom"></div>
-        </div>
+            </div>
         </form>
         <div>
             <form method="post" asp-action="AddTag" asp-route-uid="@Model.User.Id" asp-route-tid="@Model">
@@ -122,22 +122,22 @@
             </form>
 
             <h5>Mina taggar</h5>
-            <form method="post" asp-action="RemoveTag" asp-route-uid="@Model.User.Id">
-                <input asp-for="User.Id" value="@Model.User.Id" hidden />
+
                 @if(Model.User.Tags.Count <= 0)
                 {
                     <b>Du har inga taggar.</b>
                 }
                 else
                 {
-                    @foreach (var tag in Model.User.Tags)
+                    @for(int i = 0; i < Model.User.Tags.Count; i++)
                     {
+                    <form method="post" asp-action="RemoveTag" asp-route-id="@Model.User.Id" asp-route-index="@i">
                         <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Ta bort</button>
-                        <input asp-for="TagId" value="@tag.Id.ToString()" hidden/>
-                        <b>@tag.Descriptor</b><br/>
+                        <b>@Model.User.Tags[i].Descriptor</b>
+                    </form>
                     }
                 }
-            </form>
+
         </div>
 	</div>
 </body>
